changed colors to solve contrast errors at the AA level

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -10,8 +10,8 @@
     --paragraph-font: 'Oswald', sans-serif;
 
     --nav-background-color: #EAE2B7;
-    --nav-link-color: #e36414;
-    --nav-hover-link-color: #dda15e;
+    --nav-link-color: #99330f;
+    --nav-hover-link-color: #b3561b;
     --nav-hover-background-color: #eae2b7;
     --max-width: 960px
 }
